<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/time_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_above="@+id/distance"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_above="@+id/speed"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/distance"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="#009688"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginBottom="90dp"
        android:layout_above="@+id/speed"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/speed"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="#009688"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/time"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#009688"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/time_title"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button" />
    </LinearLayout>

</RelativeLayout>